# online-bookstore-project

./: README.md  dlt_postgres_to_bigquery.py  dlt_postgres_to_gcs.py  generate_fake_data.py  hello.py  main.py  pyproject.toml  utils.py
.dlt/: config.toml
composer-dags/: bq_to_gcs.py
models/: books.py  transactions.py  users.py
services/: auth.py  transaction.py
